methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:18: error: Unmatched closing brace '}' ignored here
}
^